--- a/libs/garf_community/youtube/garf_youtube_data_api/pyproject.toml
+++ b/libs/garf_community/youtube/garf_youtube_data_api/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
   "garf-io",
   "google-api-python-client",
 ]
+authors = [
+  {name = "Google Inc. (gTech gPS CSE team)", email = "no-reply@google.com"},
+]
+license = {text = "Apache 2.0"}
 requires-python = ">=3.8"
 description = "description"
 readme = "README.md"
