[core] Add support for converting report to / from polars

--- a/libs/garf_core/pyproject.toml
+++ b/libs/garf_core/pyproject.toml
@@ -37,6 +37,9 @@ version = {attr = "garf_core.__version__"}
 pandas=[
   "pandas",
 ]
+polars=[
+  "polars",
+]
 all = [
-  "garf-core[pandas]"
+  "garf-core[pandas,polars]"
 ]
