[core] Update parsers
* Include parsing response into BaseParser
* Concrete parsers need to implement abstract method parser_row
* Add tests

--- a/libs/garf_core/pyproject.toml
+++ b/libs/garf_core/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "python-dateutil",
     "jinja2==3.1.4",
     "typing-extensions",
+    "requests",
 ]
 authors = [
   {name = "Google Inc. (gTech gPS CSE team)", email = "no-reply@google.com"},
