--- a/libs/garf_executors/pyproject.toml
+++ b/libs/garf_executors/pyproject.toml
@@ -7,6 +7,7 @@ name = "garf-executors"
 dependencies = [
   "garf-core",
   "garf-io",
+  "pyyaml",
 ]
 authors = [
   {name = "Google Inc. (gTech gPS CSE team)", email = "no-reply@google.com"},
@@ -22,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Operating System :: OS Independent",
