--- a/libs/garf_io/pyproject.toml
+++ b/libs/garf_io/pyproject.toml
@@ -4,7 +4,6 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "garf-io"
-version = "0.0.2"
 dependencies = [
   'garf-core',
   'smart_open',
@@ -24,11 +23,16 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Operating System :: OS Independent",
     "License :: OSI Approved :: Apache Software License",
 ]
+dynamic=["version"]
+
+[tool.setuptools.dynamic]
+version = {attr = "garf_io.__version__"}
 
 [options.extras_require]
 test =  [
