[io] Switch to entrypoints when specyfying writers

--- a/libs/garf_io/pyproject.toml
+++ b/libs/garf_io/pyproject.toml
@@ -57,3 +57,12 @@ sheets = [
 all = [
   "garf-io[bq,sheets,sqlalchemy]"
 ]
+[project.entry-points.garf_writer]
+bq = "garf_io.writers.bigquery_writer"
+bigquery = "garf_io.writers.bigquery_writer"
+console = "garf_io.writers.console_writer"
+csv = "garf_io.writers.csv_writer"
+json = "garf_io.writers.json_writer"
+sheet = "garf_io.writers.sheets_writer"
+sheets = "garf_io.writers.sheets_writer"
+sqldb = "garf_io.writers.sqldb_writer"
