[core] Add missing pyyaml dependency in 0.0.9

--- a/libs/garf_core/pyproject.toml
+++ b/libs/garf_core/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "jinja2==3.1.4",
     "typing-extensions",
     "requests",
+    "pyyaml",
 ]
 authors = [
   {name = "Google Inc. (gTech gPS CSE team)", email = "no-reply@google.com"},
