--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,3 +34,11 @@ jobs:
           cd libs/${{ matrix.library }}
           uv pip install -e .[all]
           pytest tests/unit
+      - name: Generate Report
+        run: |
+          uv pip install coverage
+          coverage run -m pytest
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
