[core] feat: add fake report fetcher
* Update FakeApiClient to support initializating from csv and json files
* Add FakeApiReportFetcher class and expose with with `fake` alias
* Ensure that default parsers is DictParser for all ApiReportFetchers
* Add tests for fake report fetcher and api client
* Bump library to version 0.1.0

--- a/libs/garf_core/pyproject.toml
+++ b/libs/garf_core/pyproject.toml
@@ -39,7 +39,8 @@ dynamic=["version"]
 version = {attr = "garf_core.__version__"}
 
 [project.entry-points.garf]
-rest = "garf_core.report_fetcher"
+rest = "garf_core.fetchers.rest"
+fake = "garf_core.fetchers.fake"
 
 [project.optional-dependencies]
 pandas=[
