--- a/.github/workflows/publish_pypi_core.yaml
+++ b/.github/workflows/publish_pypi_core.yaml
@@ -36,11 +36,11 @@ jobs:
 
       - name: Build the package
         if: steps.version_check.outputs.should_publish == 'true'
-        run: uv build backend
+        run: uv build libs/core
 
       - name: Publish to PyPI
         if: steps.version_check.outputs.should_publish == 'true'
-        run: uv publish backend/dist/*
+        run: uv publish libs/core/dist/*
       - name: Create Git Tag
         if: steps.version_check.outputs.should_publish == 'true'
         run: |
