--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,3 +75,4 @@ nav:
       - Data API: fetchers/youtube-data-api.md
       - Reporting API: fetchers/youtube-reporting-api.md
     - Merchant Center: fetchers/merchant-center-api.md
+    - Google Analytics: fetchers/google-analytics-api.md
