--- a/.github/workflows/publish_pypi_executors.yaml
+++ b/.github/workflows/publish_pypi_executors.yaml
@@ -11,6 +11,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
     permissions:
       id-token: write
     steps:
