--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,8 +73,10 @@ nav:
     - Create API response parser: development/create-api-response-parser.md
     - Create a library: development/create-garf-library.md
   - Fetchers:
+    - fetchers/overview.md
     - YouTube:
       - Data API: fetchers/youtube-data-api.md
       - Reporting API: fetchers/youtube-reporting-api.md
     - Merchant Center: fetchers/merchant-center-api.md
     - Google Analytics: fetchers/google-analytics-api.md
+    - Bid Manager: fetchers/bid-manager.md
