[exporters] feat: initial commit for garf-exporter
garf-exporter exposes data fetched from an API into prometheus format thus making monitoring of API changes easily available.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,6 +57,11 @@ repos:
     entry: pytest -n auto libs/executors/tests/unit/
     language: system
     pass_filenames: false
+  - id: pytest-check-exporters
+    name: pytest-check-exporters
+    entry: pytest -n auto libs/exporters/tests/unit/
+    language: system
+    pass_filenames: false
   - id: executors-e2e
     stages: [pre-push]
     name: e2e
