--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
       - API: usage/api-executor.md
       - BigQuery: usage/bq-executor.md
       - SQL: usage/sql-executor.md
+    - Exporters: usage/exporters.md
   - Development:
     - Overview: development/overview.md
     - Create API client: development/create-api-client.md
