--- a/libs/executors/pyproject.toml
+++ b/libs/executors/pyproject.toml
@@ -40,6 +40,7 @@ version = {attr = "garf_executors.__version__"}
 bq=[
   "garf-io[bq]",
   "pandas",
+  "google-cloud-logging",
 ]
 sql=[
   "garf-io[sqlalchemy]",
