ci: fix publishing images to github packages

--- a/.github/workflows/push-garf-exporter-to-github-packages.yaml
+++ b/.github/workflows/push-garf-exporter-to-github-packages.yaml
@@ -40,5 +40,5 @@ jobs:
         with:
           context: libs/exporters/.
           push: true
-          tags: ${{ github.event.inputs.version }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.version }}
           labels: ${{ github.event.inputs.version }}
