ci: fix docker image entrypoint
* Copy executable scripts to final image
* Make image smaller
* Add :latest tag

--- a/libs/executors/Dockerfile
+++ b/libs/executors/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /app
 ADD requirements.txt .
 RUN uv pip install --require-hashes -r requirements.txt --target /install
 
-FROM python:3.11.8-slim-bookworm AS final
+FROM python:3.11.8-alpine AS final
 WORKDIR /app
 COPY --from=builder /install /usr/local/lib/python3.11/site-packages/
+COPY --from=builder /install/bin/ /usr/local/bin/
 ENTRYPOINT ["uvicorn", "garf_executors.entrypoints.server:app", "--host", "0.0.0.0"]
