--- a/.github/workflows/push-garf-to-github-packages.yaml
+++ b/.github/workflows/push-garf-to-github-packages.yaml
@@ -40,5 +40,7 @@ jobs:
         with:
           context: libs/executors/.
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.version }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.version }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ github.event.inputs.version }}
