--- a/libs/executors/docker-compose.yaml
+++ b/libs/executors/docker-compose.yaml
@@ -5,7 +5,7 @@ networks:
     driver: bridge
 services:
   garf:
-    image: ghcr.io/google/garf:latest
+    image: ghcr.io/google/garf:0.1.3
     ports:
       - "8001:8000"
     environment:
@@ -28,3 +28,24 @@ services:
       - "4318:4318"
     volumes:
       - "${OTEL_COLLECTOR_CONFIG}:/etc/otel-collector-config.yml"
+  prometheus:
+    image: prom/prometheus:main
+    user: 0:0
+    ports:
+      - 9090:9090
+    volumes:
+      - "${PROMETHEUS_CONFIG}:/etc/prometheus/prometheus.yml"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - 3000:3000
+    restart: unless-stopped
+    environment:
+      - GF_INSTALL_PLUGINS=marcusolsson-treemap-panel
