[executors] chore: unify CLI execution from parameters and config
* update tests to cover reading config

--- a/libs/executors/tests/end-to-end/test_config.yaml
+++ b/libs/executors/tests/end-to-end/test_config.yaml
@@ -1,4 +1,6 @@
 fake:
   writer: console
+  writer_parameters:
+    format: json
   fetcher_parameters:
-    data_location: ./test.json
+    data_location: test.json
