[core] feat: add support for simulating API responses
* Add `simulator` module with `ApiReportSimulator` class. Via its
  `simulate` method based on a query and `SimulatorSpecification` users
  can generate `n_rows` of simulated results based on provided
  ApiClient.
* Ensure that `GarfApiResponse` has optional `results_placeholder` field that
  contains fallback results in case API produce no results.
* Add `get_types` method to API that could be implemented in concrete
  ApiClients; provide an implementation for FakeApiClient.
* In `ApiReportFetcher.fetch` is no results are produces by ApiClient,
  generate placeholder and return empty report with
  `results_placeholder`.
* Create two custom simulators - for googleads and youtube-data-api
  fetchers
* Propagate `results_placeholder` in `YouTubeDataApiReportFetcher.fetch`
  when performing sorting.

--- a/.github/workflows/test_garf_youtube_data_api.yaml
+++ b/.github/workflows/test_garf_youtube_data_api.yaml
@@ -29,6 +29,9 @@ jobs:
           uv pip install pytest python-dotenv
       - name: Test ${{ matrix.library }}
         run: |
+          uv pip install -e libs/core/.[all]
+          uv pip install -e libs/io/.[test,all]
+          uv pip install -e libs/executors/.[all]
           cd libs/community/google/youtube/youtube-data-api/
           uv pip install -e .
           pytest tests/e2e
