--- a/.github/workflows/test_garf_google_ads.yaml
+++ b/.github/workflows/test_garf_google_ads.yaml
@@ -29,6 +29,9 @@ jobs:
           uv pip install pytest
       - name: Test ${{ matrix.library }}
         run: |
+          uv pip install -e libs/core/.[all]
+          uv pip install -e libs/io/.[test,all]
+          uv pip install -e libs/executors/.[all]
           cd libs/community/google/ads/
           uv pip install -e .
           pytest tests/unit
