--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,7 +61,14 @@ nav:
       - Fetchers: usage/fetcher.md
       - Parsers: usage/parsers.md
       - Report: usage/reports.md
-    - Writers: usage/writers.md
+    - Writers:
+      - usage/writers.md
+      - Console: usage/console-writer.md
+      - CSV: usage/csv-writer.md
+      - Json: usage/json-writer.md
+      - BigQuery: usage/bq-writer.md
+      - SQL: usage/sql-writer.md
+      - Sheets: usage/sheets-writer.md
     - Executors:
       - usage/executors.md
       - API: usage/api-executor.md
