feat(executors): add support for selecting port for starting server
* Add option for adding cache parameters when initializing executor from
  source alias
* Unify attributes names for telemetry

--- a/libs/executors/pyproject.toml
+++ b/libs/executors/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "pydantic",
   "opentelemetry-api",
   "opentelemetry-sdk",
+  "opentelemetry-exporter-otlp",
 ]
 authors = [
   {name = "Google Inc. (gTech gPS CSE team)", email = "no-reply@google.com"},
@@ -51,7 +52,7 @@ sql=[
 server=[
   "fastapi[standard]",
   "opentelemetry-instrumentation-fastapi",
-  "opentelemetry-exporter-otlp",
+  "typer",
 ]
 all = [
   "garf-executors[bq,sql,server]"
