--- a/libs/community/google/analytics/pyproject.toml
+++ b/libs/community/google/analytics/pyproject.toml
@@ -24,10 +24,10 @@ classifiers = [
 dynamic=["version"]
 
 [tool.setuptools.dynamic]
-version = {attr = "garf_google_analytics.__version__"}
+version = {attr = "garf.community.google.analytics.__version__"}
 
 [project.entry-points.garf]
-google-analytics = "garf_google_analytics.report_fetcher"
+google-analytics = "garf.community.google.analytics.report_fetcher"
 
 [options.extras_require]
 test =  [
@@ -35,3 +35,6 @@ test =  [
   "pytest-cov",
   "python-dotenv",
 ]
+[tool.setuptools.packages.find]
+where = ["."]
+include=["garf_google_analytics*", "garf.*"]
